--- a/style.css
+++ b/style.css
@@ -10,11 +10,45 @@
   font-family: 'Montserrat', sans-serif;
   font-size: 99px;
   text-align: center;
+  position: inherit;
 }
 
-div {
-  position: absolute;
+.header {
   height: 100vh;
+}
+
+.products {
+  height: 100vh;
+  position: relative;
+}
+
+.products h1 {
+  font-size: 5rem;
+}
+
+/* external css: flickity.css */
+.carousel {
+  background: #EEE;
+}
+
+.carousel-cell {
+  width: 30%;
+  height: 20rem;
+  margin-right: 10px;
+  background: black;
+  border-radius: 5px;
+  counter-increment: gallery-cell;
+  bottom: 0;
+}
+
+/* cell number */
+.carousel-cell:before {
+  display: block;
+  text-align: center;
+  content: counter(gallery-cell);
+  line-height: 200px;
+  font-size: 80px;
+  color: white;
 }
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
@@ -22,6 +56,9 @@ div {
     display: none;
   }
   .scrollDist {
+    display: none;
+  }
+  .masks {
     display: none;
   }
 }
